--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.8
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
